force-app/main/default/objects/KimbleOne__Risk__c/KimbleOne__Risk__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Risk</label>
    <nameField>
        <label>Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>