force-app/main/default/objects/KimbleOne__Risk__c/fields/KimbleOne__Contingency__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Contingency__c</fullName>
    <label>Contingency</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>