force-app/main/default/objects/KimbleOne__Risk__c/fields/KimbleOne__IsDeliveryGeneric__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsDeliveryGeneric__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applies to all Delivery Engagements</label>
    <type>Checkbox</type>
</CustomField>