force-app/main/default/objects/KimbleOne__Risk__c/fields/KimbleOne__IsInternal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsInternal__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Internal Only</label>
    <type>Checkbox</type>
</CustomField>