force-app/main/default/objects/KimbleOne__Risk__c/fields/KimbleOne__Issue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issue</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.KimbleOne__DeliveryGroup__c</field>
            <operation>equals</operation>
            <valueField>KimbleOne__Issue__c.KimbleOne__DeliveryGroup__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__Issue__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>