force-app/main/default/objects/KimbleOne__Risk__c/fields/KimbleOne__Mitigation__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Mitigation__c</fullName>
    <label>Mitigation</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>