force-app/main/default/objects/KimbleOne__Risk__c/fields/KimbleOne__MitigationDueDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MitigationDueDate__c</fullName>
    <label>Mitigation Due</label>
    <type>Date</type>
</CustomField>