force-app/main/default/objects/KimbleOne__Risk__c/fields/KimbleOne__OwnedByContact__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__OwnedByContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Risks (Owned By)</relationshipLabel>
    <relationshipName>RisksOwnedBy</relationshipName>
    <type>Lookup</type>
</CustomField>