force-app/main/default/objects/KimbleOne__Risk__c/fields/KimbleOne__ProbabilityJustification__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProbabilityJustification__c</fullName>
    <label>Probability Justification</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>