force-app/main/default/objects/KimbleOne__Risk__c/fields/KimbleOne__RiskProbability__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RiskProbability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Probability</label>
    <referenceTo>KimbleOne__RiskProbability__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>