force-app/main/default/objects/KimbleOne__Risk__c/fields/KimbleOne__RiskSeverity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RiskSeverity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Severity</label>
    <referenceTo>KimbleOne__RiskSeverity__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>