force-app/main/default/objects/KimbleOne__Risk__c/fields/KimbleOne__RiskStatus__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RiskStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Status</label>
    <referenceTo>KimbleOne__RiskStatus__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>