force-app/main/default/objects/KimbleOne__Risk__c/fields/KimbleOne__RiskStrategy__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RiskStrategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Strategy</label>
    <referenceTo>KimbleOne__RiskStrategy__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>