force-app/main/default/objects/KimbleOne__Risk__c/fields/KimbleOne__RiskTemplate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RiskTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Template</label>
    <referenceTo>KimbleOne__RiskTemplate__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>