force-app/main/default/objects/KimbleOne__Risk__c/fields/KimbleOne__SalesOpportunity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SalesOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Obsolete - Sales Opportunity</label>
    <referenceTo>KimbleOne__SalesOpportunity__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>