force-app/main/default/objects/KimbleOne__Risk__c/fields/KimbleOne__SharedWithCustomer__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SharedWithCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shared with Customer?</label>
    <type>Checkbox</type>
</CustomField>