force-app/main/default/objects/KimbleOne__Risk__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Summary__c</columns>
    <columns>KimbleOne__DeliveryGroup__c</columns>
    <columns>KimbleOne__Proposal__c</columns>
    <columns>KimbleOne__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>